[project]
name = "app"
version = "0.1.0"
description = "technical assessment for backend developer position at Expert Listing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asgi-correlation-id>=4.3.4",
    "fastapi-filter[sqlalchemy]>=2.0.1",
    "fastapi-pagination[sqlalchemy]>=0.15.7",
    "fastapi-problem>=0.12.0",
    "fastapi[all]>=0.128.0",
    "geoalchemy2[shapely]>=0.18.1",
    "h3>=4.4.1",
    "inflection>=0.5.1",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.12.0",
    "python-ulid[pydantic]>=3.1.0",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
test = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-socket>=0.7.0",
    "pytest-xdist[psutil]>=3.8.0",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[tool.mypy]
exclude = [
    "^.*/alembic/",
    "^./migrations/.*$",
    "^./.venv/.*$",
    "^.*/tests/.*$",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "E731", # do not assign a lambda expression, use def
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
    "C416", # Allow use of list comprehensions
]


[tool.pytest.ini_options]
addopts = ["--disable-socket", "--allow-unix-socket"]
testpaths = ["./tests/"]
python_files = ["test_*.py"]
